--------------------------------------------------------------------------------
drkns 22.12.2021 20:00:38 +0000 - build 5943

1. Delay load config DBs.

--------------------------------------------------------------------------------
drkns 22.12.2021 02:14:35 +0000 - build 5942

1. Continue 5890: fuzzy search is now optional.
   It can be activated with the third state of the "Case sensitive" option in dialogs.

--------------------------------------------------------------------------------
drkns 22.12.2021 00:17:17 +0000 - build 5941

1. Refactoring.

2. Add a help page for sort criteria.

--------------------------------------------------------------------------------
drkns 19.12.2021 13:30:58 +0000 - build 5940

1. Continue 5938.

--------------------------------------------------------------------------------
drkns 18.12.2021 03:37:55 +0000 - build 5939

1. Alternative NTSTATUS accessing.

--------------------------------------------------------------------------------
drkns 18.12.2021 01:09:04 +0000 - build 5938

1. FS monitoring rework (again).
   "System settings - Update panels only when Far is active" is no longer needed and removed.

--------------------------------------------------------------------------------
drkns 15.12.2021 16:24:56 +0000 - build 5937

1. Data alignment corrections.

--------------------------------------------------------------------------------
drkns 14.12.2021 12:12:19 +0000 - build 5936

1. Correction of 5932.

--------------------------------------------------------------------------------
drkns 13.12.2021 23:10:45 +0000 - build 5935

1. Correction of 5932.

--------------------------------------------------------------------------------
drkns 13.12.2021 21:58:58 +0000 - build 5934

1. Forum: incorrect percents in editor progress bar (and potentially elsewhere).

--------------------------------------------------------------------------------
drkns 13.12.2021 12:50:18 +0000 - build 5933

1. Typo.
