@@ -48,168 +48,160 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #include "platform.fs.hpp"
 
 // Common:
+#include "platform.concurrency.hpp"
+#include "common/singleton.hpp"
 #include "common/string_utils.hpp"
 
 // External:
 
 //----------------------------------------------------------------------------
 
-FileSystemWatcher::~FileSystemWatcher()
+class background_watcher: public singleton<background_watcher>
 {
-	try
+public:
+	void add(const FileSystemWatcher* Client)
 	{
-		Release();
+		SCOPED_ACTION(std::lock_guard)(m_CS);
+
+		m_Clients.emplace_back(Client);
+
+		if (!m_Thread.joinable())
+			m_Thread = os::thread{ os::thread::mode::join, &background_watcher::process, this };
+
+		m_Update.set();
 	}
-	catch (...)
+
+	void remove(const FileSystemWatcher* Client)
 	{
-		LOGERROR(L"Unknown exception"sv);
+		SCOPED_ACTION(std::lock_guard)(m_CS);
+
+		std::erase(m_Clients, Client);
+
+		m_Update.set();
 	}
-}
 
-void FileSystemWatcher::Set(string_view const EventId, string_view const Directory, bool const WatchSubtree)
+private:
+	void process()
+	{
+		os::debug::set_thread_name(L"FS watcher");
+
+		while (!m_Clients.empty())
+		{
+			{
+				SCOPED_ACTION(std::lock_guard)(m_CS);
+
+				m_Handles.resize(1);
+				std::transform(ALL_CONST_RANGE(m_Clients), std::back_inserter(m_Handles), [](const FileSystemWatcher* const Client) { return Client->m_Event.native_handle(); });
+			}
+
+			const auto Result = os::handle::wait_any(m_Handles);
+
+			if (Result == 0)
+				continue;
+
+			m_Clients[Result - 1]->callback_notify();
+
+			for (const auto& Client: m_Clients)
+			{
+				if (Client != m_Clients[Result - 1] && Client->m_Event.is_signaled())
+					Client->callback_notify();
+			}
+
+			// FS changes can occur at a high rate.
+			// We don't care about individual events, so we wait a little here to let them collapse to one event per sec at most:
+			(void)m_Update.is_signaled(1s);
+		}
+	}
+
+private:
+	os::critical_section m_CS;
+	os::event m_Update{ os::event::type::automatic, os::event::state::nonsignaled };
+	std::vector<const FileSystemWatcher*> m_Clients;
+	std::vector<HANDLE> m_Handles{ m_Update.native_handle()};
+	os::thread m_Thread;
+};
+
+static os::handle open(const string_view Directory)
 {
-	Release();
-
-	m_EventId = EventId;
-	m_Directory = NTPath(Directory);
-	m_WatchSubtree = WatchSubtree;
-}
-
-void FileSystemWatcher::Watch()
-{
-	PropagateException();
-
 	SCOPED_ACTION(elevation::suppress);
 
-	if(!m_RegistrationThread)
-		m_RegistrationThread = os::thread(os::thread::mode::join, &FileSystemWatcher::Register, this);
+	auto DirectoryHandle = os::fs::create_file(
+		Directory,
+		FILE_LIST_DIRECTORY,
+		os::fs::file_share_all,
+		{},
+		OPEN_EXISTING,
+		FILE_FLAG_BACKUP_SEMANTICS | FILE_FLAG_OVERLAPPED
+	);
+
+	if (!DirectoryHandle)
+		LOGWARNING(L"create_file({}): {}"sv, Directory, last_error());
+
+	return DirectoryHandle;
 }
 
-void FileSystemWatcher::Release()
+FileSystemWatcher::FileSystemWatcher(const string_view EventId, const string_view Directory, const bool WatchSubtree):
+	m_EventId(EventId),
+	m_Directory(NTPath(Directory)),
+	m_WatchSubtree(WatchSubtree),
+	m_DirectoryHandle(open(m_Directory))
 {
-	PropagateException();
+	m_Overlapped.hEvent = m_Event.native_handle();
+	read_async();
 
-	if (m_RegistrationThread)
+	LOGDEBUG(L"Start monitoring {}"sv, m_Directory);
+	background_watcher::instance().add(this);
+}
+
+FileSystemWatcher::~FileSystemWatcher()
+{
+	LOGDEBUG(L"Stop monitoring {}"sv, m_Directory);
+	background_watcher::instance().remove(this);
+}
+
+void FileSystemWatcher::read_async() const
+{
+	if (!ReadDirectoryChangesW(
+		m_DirectoryHandle.native_handle(),
+		&Buffer,
+		sizeof(Buffer),
+		m_WatchSubtree,
+		FILE_NOTIFY_CHANGE_FILE_NAME |
+		FILE_NOTIFY_CHANGE_DIR_NAME |
+		FILE_NOTIFY_CHANGE_ATTRIBUTES |
+		FILE_NOTIFY_CHANGE_SIZE |
+		FILE_NOTIFY_CHANGE_LAST_WRITE |
+		FILE_NOTIFY_CHANGE_LAST_ACCESS |
+		FILE_NOTIFY_CHANGE_CREATION |
+		FILE_NOTIFY_CHANGE_SECURITY,
+		{},
+		&m_Overlapped,
+		{}
+	))
 	{
-		m_Cancelled.set();
-		m_RegistrationThread = {};
+		LOGWARNING(L"ReadDirectoryChangesW({}): {}"sv, m_Directory, last_error());
+	}
+}
+
+void FileSystemWatcher::callback_notify() const
+{
+	if (DWORD BytesReturned = 0; !GetOverlappedResult(m_DirectoryHandle.native_handle(), &m_Overlapped, &BytesReturned, false))
+	{
+		const auto LastError = last_error();
+		if (!(LastError.Win32Error == ERROR_ACCESS_DENIED && LastError.NtError == STATUS_DELETE_PENDING))
+		{
+			LOGWARNING(L"GetOverlappedResult({}): {}"sv, m_Directory, LastError);
+		}
+
+		LOGDEBUG(L"Stop monitoring {}"sv, m_Directory);
+		return;
 	}
 
-	m_Cancelled.reset();
-}
+	LOGDEBUG(L"Change event in {}"sv, m_Directory);
 
-void FileSystemWatcher::Register()
-{
-	os::debug::set_thread_name(L"FS watcher");
+	LOGDEBUG(L"Notifying the listener {}"sv, m_EventId);
+	message_manager::instance().notify(m_EventId);
 
-	seh_try_thread(m_ExceptionPtr, [this]
-	{
-		cpp_try(
-		[&]
-		{
-			LOGDEBUG(L"Start monitoring {}"sv, m_Directory);
-
-			const auto DirectoryHandle = os::fs::create_file(
-				m_Directory,
-				FILE_LIST_DIRECTORY,
-				os::fs::file_share_all,
-				{},
-				OPEN_EXISTING,
-				FILE_FLAG_BACKUP_SEMANTICS | FILE_FLAG_OVERLAPPED
-			);
-
-			if (!DirectoryHandle)
-			{
-				LOGWARNING(L"create_file({}): {}"sv, m_Directory, last_error());
-				return;
-			}
-
-			// https://docs.microsoft.com/en-us/windows/win32/api/winbase/nf-winbase-readdirectorychangesw
-			// If the buffer overflows, ReadDirectoryChangesW will still return true, but the entire contents
-			// of the buffer are discarded and the BytesReturned parameter will be zero, which indicates
-			// that your buffer was too small to hold all of the changes that occurred.
-
-			// We don't care about individual changes, so the buffer is intentionally small.
-			FILE_NOTIFY_INFORMATION Buffer;
-			const os::event Event(os::event::type::automatic, os::event::state::nonsignaled);
-			OVERLAPPED Overlapped{};
-			Overlapped.hEvent = Event.native_handle();
-
-			for (;;)
-			{
-				if (!ReadDirectoryChangesW(
-					DirectoryHandle.native_handle(),
-					&Buffer,
-					sizeof(Buffer),
-					m_WatchSubtree,
-						FILE_NOTIFY_CHANGE_FILE_NAME |
-						FILE_NOTIFY_CHANGE_DIR_NAME |
-						FILE_NOTIFY_CHANGE_ATTRIBUTES |
-						FILE_NOTIFY_CHANGE_SIZE |
-						FILE_NOTIFY_CHANGE_LAST_WRITE |
-						FILE_NOTIFY_CHANGE_LAST_ACCESS |
-						FILE_NOTIFY_CHANGE_CREATION |
-						FILE_NOTIFY_CHANGE_SECURITY,
-					{},
-					&Overlapped,
-					{}
-				))
-				{
-					LOGWARNING(L"ReadDirectoryChangesW({}): {}"sv, m_Directory, last_error());
-					return;
-				}
-
-				switch (os::handle::wait_any({ Event.native_handle(), m_Cancelled.native_handle() }))
-				{
-				case 0:
-					if (DWORD BytesReturned = 0; !GetOverlappedResult(DirectoryHandle.native_handle(), &Overlapped, &BytesReturned, false))
-					{
-						const auto LastError = last_error();
-						if (!(LastError.Win32Error == ERROR_ACCESS_DENIED && LastError.NtError == STATUS_DELETE_PENDING))
-						{
-							LOGWARNING(L"GetOverlappedResult({}): {}"sv, m_Directory, LastError);
-						}
-
-						LOGDEBUG(L"Stop monitoring {}"sv, m_Directory);
-						return;
-					}
-
-					LOGDEBUG(L"Change event in {}"sv, m_Directory);
-
-					LOGDEBUG(L"Notifying the listener {}"sv, m_EventId);
-					message_manager::instance().notify(m_EventId);
-
-					// FS changes can occur at a high rate.
-					// We don't care about individual events, so we wait a little here to let them collapse to one event per sec at most:
-					if (m_Cancelled.is_signaled(1s))
-					{
-						LOGDEBUG(L"Stop monitoring {}"sv, m_Directory);
-						return;
-					}
-
-					LOGDEBUG(L"Continue monitoring {}"sv, m_Directory);
-					break;
-
-				case 1:
-					LOGDEBUG(L"Stop monitoring {}"sv, m_Directory);
-					return;
-				}
-			}
-		},
-		[&]
-		{
-			SAVE_EXCEPTION_TO(m_ExceptionPtr);
-			m_IsRegularException = true;
-		});
-	});
-}
-
-void FileSystemWatcher::PropagateException() const
-{
-	if (m_ExceptionPtr && !m_IsRegularException)
-	{
-		// You're someone else's problem
-		m_RegistrationThread.detach();
-	}
-	rethrow_if(m_ExceptionPtr);
+	LOGDEBUG(L"Continue monitoring {}"sv, m_Directory);
+	read_async();
 }
