@@ -40,31 +40,38 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #include "platform.concurrency.hpp"
 
 // Common:
+#include "common/noncopyable.hpp"
 
 // External:
 
 //----------------------------------------------------------------------------
 
-class FileSystemWatcher: noncopyable
+class FileSystemWatcher
 {
 public:
-	FileSystemWatcher() = default;
+	NONCOPYABLE(FileSystemWatcher);
+
+	FileSystemWatcher(string_view EventId, string_view Directory, bool WatchSubtree);
 	~FileSystemWatcher();
-	void Set(string_view EventId, string_view Directory, bool WatchSubtree);
-	void Watch();
-	void Release();
 
 private:
-	void Register();
-	void PropagateException() const;
+	friend class background_watcher;
+
+	void read_async() const;
+	void callback_notify() const;
 
 	string m_EventId;
 	string m_Directory;
 	bool m_WatchSubtree{};
-	os::event m_Cancelled{ os::event::type::manual, os::event::state::nonsignaled };
-	mutable std::exception_ptr m_ExceptionPtr;
-	bool m_IsRegularException{};
-	mutable os::thread m_RegistrationThread;
+	os::handle m_DirectoryHandle;
+	os::event m_Event{ os::event::type::automatic, os::event::state::nonsignaled };
+	// https://docs.microsoft.com/en-us/windows/win32/api/winbase/nf-winbase-readdirectorychangesw
+	// If the buffer overflows, ReadDirectoryChangesW will still return true, but the entire contents
+	// of the buffer are discarded and the BytesReturned parameter will be zero, which indicates
+	// that your buffer was too small to hold all of the changes that occurred.
+	// We don't care about individual changes, so the buffer is intentionally small.
+	mutable FILE_NOTIFY_INFORMATION Buffer;
+	mutable OVERLAPPED m_Overlapped{};
 };
 
 #endif // FILESYSTEMWATCHER_HPP_A4DC2834_A694_4E86_B8BA_FDA8DBF728CD
