@@ -1,4 +1,10 @@
 --------------------------------------------------------------------------------
+drkns 23.12.2021 02:14:27 +0000 - build 5944
+
+1. FS monitoring rework (again).
+   Now only one extra thread.
+
+--------------------------------------------------------------------------------
 drkns 22.12.2021 20:00:38 +0000 - build 5943
 
 1. Delay load config DBs.
